--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -114,3 +114,12 @@ font-weight: bold;
     margin: 20px 20px 50px;
 }
 
+/*pricing section*/
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column{
+   padding: 3% 2%; 
+}
